--- a/src/styles.scss
+++ b/src/styles.scss
@@ -69,6 +69,10 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 18px;
 }
 
+.h6 {
+  font-size: 15px;
+}
+
 @media (max-width: 768px) {
   .h1 {
     font-size: 38px;
@@ -88,6 +92,10 @@ h1, h2, h3, h4, h5, h6 {
 
   .h5 {
     font-size: 16px;
+  }
+
+  .h6 {
+    font-size: 13px;
   }
 }
 
@@ -111,6 +119,10 @@ h1, h2, h3, h4, h5, h6 {
   .h5 {
     font-size: 14px;
   }
+
+  .h6 {
+    font-size: 13px;
+  }
 }
 
 .secondary-font {
@@ -131,6 +143,13 @@ a:hover {
 
 img {
   width: 100%;
+}
+
+.form-errors {
+  color: $secondary-color !important;
+  font-weight: 300;
+  padding-left: 15px;
+  //color: $red-color;
 }
 
 /* Button settings */
@@ -443,6 +462,11 @@ section {
 
 .colored-navbar {
   background-color: $gradient-color;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 999;
   //opacity: 0.6;
 }
 
