--- a/src/app/client/client-profile/client-profile.component.html
+++ b/src/app/client/client-profile/client-profile.component.html
@@ -1,8 +1,12 @@
 <app-client-navigation></app-client-navigation>
+<head>
+  <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
 <div class="profile-card">
   <div class="card">
     <div class="card-body" *ngIf="profile">
-      <i class="ri-edit-box-line edit"></i>
+      <i class='bx bx-edit edit'></i>
       <table>
         <tbody>
         <h2>Profile</h2>
