--- a/src/app/admin/admin-users/admin-users.component.html
+++ b/src/app/admin/admin-users/admin-users.component.html
@@ -63,7 +63,7 @@
         <div class="recent-sales box">
           <div class="title">User list</div>
           <ul class="dark-text">
-            <li>No customs found.</li>
+            <li>No users found.</li>
           </ul>
         </div>
       </div>
