--- a/src/app/admin/navigation/navigation.component.html
+++ b/src/app/admin/navigation/navigation.component.html
@@ -1,11 +1,10 @@
-<!--<head>-->
-<!--  <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>-->
-<!--  <meta name="viewport" content="width=device-width, initial-scale=1.0">-->
-<!--</head>-->
+<head>
+  <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
+</head>
 <nav class="navbar">
   <div class="sidebar-button">
 <!--    <a (click)="toggleSidebar()">-->
-<!--      <i class='bx bx-menu sidebarBtn' [class]="isSidebarActive ? 'bx-menu-alt-right' : 'bx-menu'"></i>-->
+<!--      <i class='sidebarBtn bx bx-menu' [class]="isSidebarActive ? 'bx-menu-alt-right' : 'bx-menu'"></i>-->
 <!--    </a>-->
     <i class='bx bx-menu sidebarBtn'></i>
     <span class="dashboard h4">Dashboard</span>
