--- a/src/app/admin/product/product.component.html
+++ b/src/app/admin/product/product.component.html
@@ -42,9 +42,9 @@
     <div class="home-content">
       <div class="sales-boxes">
         <div class="recent-sales box">
-          <div class="title">User list</div>
+          <div class="title">Product list</div>
           <ul class="dark-text">
-            <li>No customs found.</li>
+            <li>No products found.</li>
           </ul>
         </div>
       </div>
