--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -5,6 +5,45 @@
       <h1 class="h2">Our Menu</h1>
     </div>
   </div>
+</section>
+
+<!--<ng-container class="menu-item menu-member hover-effect" *ngFor="let group of menuItems | chunk: 4">-->
+<!--  <div class="menu-group">-->
+<!--    &lt;!&ndash; Loop through the group of menu items &ndash;&gt;-->
+<!--    <div class="menu-item" *ngFor="let menuItem of group">-->
+<!--      <img [src]="" alt="">-->
+<!--      <h3 class="item-name">{{ menuItem.name }}</h3>-->
+<!--      <p class="item-description">{{ menuItem.description }}</p>-->
+<!--      <p class="item-price">Price: ${{ menuItem.price }}</p>-->
+<!--      <p class="item-weight">Weight: {{ menuItem.weight }}g</p>-->
+<!--      <p class="item-availability">-->
+<!--        Availability: {{ menuItem.availability ? 'Available' : 'Unavailable' }}-->
+<!--      </p>-->
+<!--    </div>-->
+<!--  </div>-->
+<!--</ng-container>-->
+
+<!--    &lt;!&ndash; Loop through the menuItems array and generate menu item elements &ndash;&gt;-->
+<!--    <div class="menu-item menu-member hover-effect" *ngFor="let menuItem of menuItems">-->
+<!--      <img [src]="getImageUrl(menuItem.id)" alt="">-->
+<!--      <h3 class="item-name">{{ menuItem.name }}</h3>-->
+<!--      <p class="item-description">{{ menuItem.description }}</p>-->
+<!--      <p class="item-price">Price: ${{ menuItem.price }}</p>-->
+<!--      <p class="item-weight">Weight: {{ menuItem.weight }}g</p>-->
+<!--      <p class="item-availability">-->
+<!--        Availability: {{ menuItem.availability ? 'Available' : 'Unavailable' }}-->
+<!--      </p>-->
+<!--    </div>-->
+
+<!--<app-client-navigation></app-client-navigation>-->
+<!--<section id="menu">-->
+<!--  <div class="menu-container">-->
+<!--    <div class="intro-text">-->
+<!--      <h1 class="h2">Our Menu</h1>-->
+<!--    </div>-->
+<!--  </div>-->
+<!--</section>-->
+
   <!--  <div class="four-col-grid">-->
   <!--    <div class="menu-member hover-effect">-->
   <!--      <img src="" alt="">-->
@@ -14,7 +53,7 @@
   <!--      </div>-->
   <!--    </div>-->
   <!--    <div class="menu-member hover-effect">-->
-  <!--      <img src="" alt="">-->
+<!--        <img src="" alt="">-->
   <!--      <div class="content">-->
   <!--        <h4 class="h5">Ice cream muffin</h4>-->
   <!--        <p class="simple-text h5">Satisfy your sweet tooth with our Ice Cream Muffin, which features a warm, moist muffin topped with a scoop of creamy ice cream</p>-->
@@ -35,4 +74,4 @@
   <!--      </div>-->
   <!--    </div>-->
   <!--  </div>-->
-</section>
+<!--</section>-->
