--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -1,7 +1,7 @@
 <div class="form-container gradient-body">
   <div class="title">Registration</div>
   <div class="content">
-    <form id="registration-form" action="#" (ngSubmit)="onAddUser(f)" #f="ngForm">
+    <form id="registration-form" action="#" (ngSubmit)="onAddUser(f, $event)" #f="ngForm">
       <div class="user-details">
         <div class="input-box">
           <label>
