--- a/src/app/admin/product/product.component.html
+++ b/src/app/admin/product/product.component.html
@@ -1,8 +1,7 @@
 <app-sidebar></app-sidebar>
-
 <div class="admin-container">
   <app-navigation></app-navigation>
-  <ng-container *ngIf="products.length > 0; else noCustoms">
+  <ng-container *ngIf="products.length > 0; else noProducts">
     <div class="home-content">
       <div class="sales-boxes">
         <div class="recent-sales box">
@@ -10,35 +9,25 @@
           <div class="sales-details">
             <ul>
               <li class="topic">Name</li>
-              <ng-container *ngFor="let product of products">
-                <ul class="details dark-text">
-                  <li>{{product.name}}</li>
-                </ul>
-              </ng-container>
+              <li *ngFor="let product of products" class="details dark-text">{{ product.name }}</li>
             </ul>
             <ul>
               <li class="topic">Price</li>
-              <ng-container *ngFor="let product of products">
-                <ul class="details dark-text">
-                  <li>{{product.price}}</li>
-                </ul>
-              </ng-container>
+              <li *ngFor="let product of products" class="details dark-text">{{ product.price }}</li>
             </ul>
             <ul>
               <li class="topic">Weight</li>
-              <ng-container *ngFor="let product of products">
-                <ul class="details dark-text">
-                  <li>{{product.weight}}</li>
-                </ul>
-              </ng-container>
+              <li *ngFor="let product of products" class="details dark-text">{{ product.weight }}</li>
             </ul>
           </div>
-          <div class="right-btn"><button class='primary-btn'>See all</button></div>
+          <div class="right-btn">
+            <button class='primary-btn'>See all</button>
+          </div>
         </div>
       </div>
     </div>
   </ng-container>
-  <ng-template #noCustoms>
+  <ng-template #noProducts>
     <div class="home-content">
       <div class="sales-boxes">
         <div class="recent-sales box">
