--- a/src/app/admin/sidebar/sidebar.component.html
+++ b/src/app/admin/sidebar/sidebar.component.html
@@ -4,7 +4,7 @@
 </head>
 <div class="sidebar">
   <a href="index.html" class="logo">
-    <img src="images/logo.png" alt="">
+    <img src="/assets/images/logo.png" alt="">
     <p class="cafe-name h3">The Lavender cafe</p>
   </a>
   <ul class="nav-links">
