--- a/src/app/admin/navigation/navigation.component.html
+++ b/src/app/admin/navigation/navigation.component.html
@@ -2,15 +2,15 @@
   <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <nav class="navbar">
-  <div class="sidebar-button">
+<!--  <div class="sidebar-button">-->
 <!--    <a (click)="toggleSidebar()">-->
 <!--      <i class='sidebarBtn bx bx-menu' [class]="isSidebarActive ? 'bx-menu-alt-right' : 'bx-menu'"></i>-->
 <!--    </a>-->
-    <i class='bx bx-menu sidebarBtn'></i>
-    <span class="dashboard h4">Dashboard</span>
-  </div>
+<!--    <i class='bx bx-menu sidebarBtn'></i>-->
+<!--    <span class="dashboard h4">Dashboard</span>-->
+<!--  </div>-->
   <div class="search-box">
-    <input type="text" placeholder="Search..." class="form-control">
+    <input type="text" placeholder="Search..." class="form-control-pos form-control">
     <i class='fas fa-search' ></i>
   </div>
 </nav>
