--- a/src/app/admin/sidebar/sidebar.component.html
+++ b/src/app/admin/sidebar/sidebar.component.html
@@ -15,7 +15,7 @@
       </a>
     </li>
     <li>
-      <a >
+      <a routerLink="/item">
         <i class='bx bx-add-to-queue' ></i>
         <span class="links-name">Add menu item</span>
       </a>
