--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -48,6 +48,128 @@
         <i class='bx bxs-cart-download cart four' ></i>
       </div>
     </div>
+
+    <div class="sales-boxes">
+      <div class="recent-sales box">
+        <div class="title">Recent Sales</div>
+        <div class="sales-details">
+          <ul class="details">
+            <li class="topic">Date</li>
+            <li><a href="#">27 March 2023</a></li>
+            <li><a href="#">27 March 2023</a></li>
+            <li><a href="#">27 March 2023</a></li>
+            <li><a href="#">27 March 2023</a></li>
+            <li><a href="#">26 March 2023</a></li>
+            <li><a href="#">24 March 2023</a></li>
+            <li><a href="#">20 March 2023</a></li>
+            <li><a href="#">18 March 2023</a></li>
+            <li><a href="#">15 March 2023</a></li>
+          </ul>
+          <ul class="details">
+            <li class="topic">Customer</li>
+            <li><a href="#">John Smith</a></li>
+            <li><a href="#">John Smith</a></li>
+            <li><a href="#">John Smith</a></li>
+            <li><a href="#">John Smith</a></li>
+            <li><a href="#">John Smith</a></li>
+            <li><a href="#">John Smith</a></li>
+            <li><a href="#">John Smith</a></li>
+            <li><a href="#">John Smith</a></li>
+            <li><a href="#">John Smith</a></li>
+          </ul>
+          <ul class="details">
+            <li class="topic">Sales</li>
+            <li><a href="#">Accepted</a></li>
+            <li><a href="#">Delivered</a></li>
+            <li><a href="#">Cancelled</a></li>
+            <li><a href="#">Delivered</a></li>
+            <li><a href="#">Cancelled</a></li>
+            <li><a href="#">Delivered</a></li>
+            <li><a href="#">Delivered</a></li>
+            <li><a href="#">Cancelled</a></li>
+            <li><a href="#">Delivered</a></li>
+          </ul>
+          <ul class="details">
+            <li class="topic">Total</li>
+            <li><a href="#">₴19</a></li>
+            <li><a href="#">₴250</a></li>
+            <li><a href="#">₴800</a></li>
+            <li><a href="#">₴100</a></li>
+            <li><a href="#">₴1000</a></li>
+            <li><a href="#">₴200</a></li>
+            <li><a href="#">₴255</a></li>
+            <li><a href="#">₴35</a></li>
+            <li><a href="#">₴140</a></li>
+          </ul>
+        </div>
+        <div class="right-btn"><button class='primary-btn'>See all</button></div>
+      </div>
+      <div class="top-sales box">
+        <div class="title">Top Selling Product</div>
+        <ul class="top-sales-details">
+          <li>
+            <a href="#">
+              <span class="topic product">Menu item</span>
+            </a>
+            <span class="topic price">Price</span>
+          </li>
+          <li>
+            <a href="#">
+              <span class="product">Lavender latte</span>
+            </a>
+            <span class="price">₴125</span>
+          </li>
+          <li>
+            <a href="#">
+              <span class="product">Ice cream muffin</span>
+            </a>
+            <span class="price">₴100</span>
+          </li>
+          <li>
+            <a href="#">
+              <span class="product">Lavender lemonade</span>
+            </a>
+            <span class="price">₴70</span>
+          </li>
+          <li>
+            <a href="#">
+              <span class="product">Caramel coffee</span>
+            </a>
+            <span class="price">₴75</span>
+          </li>
+          <li>
+            <a href="#">
+              <span class="product">Lavender macaroon</span>
+            </a>
+            <span class="price">₴35</span>
+          </li>
+          <li>
+            <a href="#">
+              <span class="product">Berry pie</span>
+            </a>
+            <span class="price">₴80</span>
+          </li>
+          <li>
+            <a href="#">
+              <span class="product">Belgium waffle</span>
+            </a>
+            <span class="price">₴150</span>
+          </li>
+          <li>
+            <a href="#">
+              <span class="product">Lavender tea</span>
+            </a>
+            <span class="price">₴75</span>
+          </li>
+          <li>
+            <a href="#">
+              <span class="product">Raspberry smoothie</span>
+            </a>
+            <span class="price">₴80</span>
+          </li>
+        </ul>
+      </div>
+    </div>
   </div>
 </div>
 <!--<div class="row">-->
