--- a/src/styles.scss
+++ b/src/styles.scss
@@ -992,6 +992,11 @@ nav .search-box .bx-search{
   font-size: 22px;
   transition: all 0.4s ease;
 }
+
+.form-control-pos {
+  margin: 25px 5px 5px 10px !important;
+}
+
 .home-section nav .profile-details{
   display: flex;
   align-items: center;
@@ -1132,6 +1137,13 @@ nav .profile-details i{
   font-size: 20px;
   font-weight: 500;
 }
+
+.topic {
+  color: $primary-color !important;
+  font-size: 20px !important;
+  font-weight: 500 !important;
+}
+
 .sales-boxes .sales-details li{
   list-style: none;
   margin: 8px 0;
@@ -1164,13 +1176,16 @@ nav .profile-details i{
 /* Right box */
 .admin-container {
   margin-left: 250px !important;
-  padding-top: 110px;
+  padding-top: 80px;
   padding-bottom: 30px;
   flex-direction: row;
   //justify-content: flex-start; /* Change this to adjust the horizontal positioning */
   //align-items: flex-start; /* Change this to adjust the vertical positioning */
 }
 
+.admin-main-info {
+  margin-top: 30px !important;
+}
 
 .home-content .sales-boxes .top-sales{
   width: 35%;
@@ -1314,6 +1329,17 @@ nav .profile-details i{
 //  padding: 10px;
 //  background: linear-gradient(135deg, #71b7e6, #9b59b6);
 //}
+
+.add-item-form {
+  margin-left: 0 !important;
+  position: relative !important;
+  left: 20px;
+  top: 10px;
+}
+
+.add-item-content {
+  padding-top: 0!important;
+}
 
 .form-container{
   max-width: 750px;
